Support curve computation fit model, support coarse grained(megatron-based) strategy search, support training with Megatron Dataset

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ dist/
 log/
 *.o
 *.so
+
+
+*.log
+*.json
+galvatron/profile_hardware/hostfile
+galvatron/profile_hardware/profile_reducescatter.py
+galvatron/profile_hardware/test.sh
