Adjust cost model. Overlap comm & comp

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ log/
 
 *.log
 *.json
+*.nsys-rep
+galvatron/models/gpt_hf/eval
 galvatron/profile_hardware/hostfile
 galvatron/profile_hardware/profile_reducescatter.py
 galvatron/profile_hardware/test.sh
