Add sync grad reduce, adapt ulysses to gpt(untest), change dataloader of pipeline(unsupport fa model)

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ log/
 *.log
 *.json
 *.nsys-rep
+*.pickle
 galvatron/models/gpt_hf/eval
 galvatron/profile_hardware/hostfile
 galvatron/profile_hardware/profile_reducescatter.py
