Add runtime test & Fix bug.

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,7 @@
 markers =
     distributed: marks tests that require distributed setup
     model: marks tests that require e2e model setup
+    parallel: marks tests about parallel setup
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
