Add tests of search engines

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@ markers =
     distributed: marks tests that require distributed setup
     model: marks tests that require e2e model setup
     parallel: marks tests about parallel setup
+    search_engine: marks tests about search engine
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
