--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,8 @@ markers =
     model: marks tests that require e2e model setup
     parallel: marks tests about parallel setup
     search_engine: marks tests about search engine
+    profiler: marks tests about profiler
+    utils: marks tests about utils
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
